5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1635_2445.log
== TEST (2019-04-08 15:19:45) 
-- CODE:
escala = input("C/F? ")
T = input("temperatura: ")

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(f)
else:
	c = ((T - 32) * 5) / 9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = ((T * 9) / 5) + 32
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:19:53) 
-- CODE:
escala = input("C/F? ")
T = input("temperatura: ")

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(f)
else:
	c = ((T - 32) * 5) / 9
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = ((T * 9) / 5) + 32
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:41) 
-- CODE:
escala = float(input("C/F? "))
T = input("temperatura: ")

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(f)
else:
	c = ((T - 32) * 5) / 9
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escala = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:19) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(f)
else:
	c = ((T - 32) * 5) / 9
	print(c)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:38) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:53) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:57) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:19) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:28:20) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- EXECUTION TIME:
0.270953
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:29:11) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:30:34) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- EXECUTION TIME:
0.144476
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:35) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:30) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:03) 
-- CODE:
escala = input("C/F? ")
T = float(input("temperatura: "))

if escala == "C":
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:19) 
-- CODE:
escala = input("C/F? ")

if escala == "C":
	T = float(input("temperatura: "))
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
else:
	T = float(input("temperatura: "))
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:25) 
-- CODE:
escala = input("C/F? ")

if escala == "C":
	T = float(input("temperatura: "))
	f = ((T * 9) / 5) + 32
	print(round(f, 2)
	T = float(input("temperatura: "))
	c = ((T - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    T = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:16) 
-- CODE:
escala = input("C/F? ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t * 9) / 5) + 32
	print(round(f, 2)
else:
	t = float(input("temperatura: "))
	c = ((t - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:22) 
-- CODE:
escala = input("C/F? ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t * 9) / 5) + 32
	print(round(f, 2)
   else:
	t = float(input("temperatura: "))
	c = ((t - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:35) 
-- CODE:
escala = input("C/F? ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t * 9) / 5) + 32
	print(round(f, 2)
else:
	t = float(input("temperatura: "))
	c = ((t - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:36:18) 
-- CODE:
escala = input("C/F? ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t * 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) * 5) / 9
	print(round(c, 2)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:36:24) 
-- CODE:
escala = input("C/F? ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t * 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) * 5) / 9
	print(round(c, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:36:41) 
-- CODE:
escala = input("C/F? ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t * 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) * 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.284934
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
